2017-12-03 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

				* parameter start_index be added in batch_file function

2017-11-21 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

			    * rename all hander to handler and mhander to mhandler
				* add function batch_file in R/utils.R

2017-11-21 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

				* split_list be added in R/split.R
				* param use_system_split be added in split_row_file

2017-11-20 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

                * get_split_seqs, split_row_data split_row_file, 
				and split_col_data be added in R/split.R
				* rename R/file.R to R/merge.R

2017-11-18 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

                * get_files_mtime and get_files_ctime be added in R/log.R 

2017-11-08 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
                * vignettes be added

2017-11-07 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
                * merge_table_files be added
                * reduce qualityconfirm size

2017-10-13 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
                * gvmap be added in inst/extdata/tools/

2017-10-11 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
                * control flag be added in extra_params of hander and mhander
                * QualityConfirm be added in inst/extdata/tools/

2017-10-10 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
                * muts2mutation_mapper, muts2oncoprinter and fusions2oncoprinter be added in R/cbioportal_trasefer.R
                * inst/extdata/config/cbioportal.toml be added
                * reducing redundant code

2017-09-30 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>

                * R/hander.R, R/mhander.R and R/filter.R be added
                * inst/extdata/config/filter.toml, hander.toml be added
                * hander and mhander functions be added
                * rename mut2pp and fusion2pp
                * inst/extdata/config/hander.toml and mhander.toml be added
                * hander_confg_file and mhander_confg_file API be added