@@ -1,5 +1,9 @@
 2017-12-03 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
+				* fix start_index length problem
+
+2017-12-03 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+
 				* parameter start_index be added in batch_file function
 
 2017-11-21 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
